--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,39 +1,40 @@
 body{
-    background-image:
-  url('https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
-    background-size: auto 100vh;
-    font-family: Arial;
-    height: 100vh;
-  }
-  
-  .menu{
-    background-color:white;
-  }
-  
-  .menu ul{
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .menu li{
-    list-style: none;
-  }
-  
-  a {
-    color: teal;
-    text-decoration: none;
-  }
-  
-  a:hover{
-    text-decoration:underline; 
-  }
-  
-  .site-subtitle,
-  .site-title{
-    color: whitesmoke;
-    text-align: center;
-  }
-  
-  .site-subtitle{
-    font-style: italic;
-  }
+  background-image:
+url('https://wallpaper-house.com/data/out/12/wallpaper2you_557041.jpg');
+  background-size: auto 100vh; 
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif; 
+  height: 100vh;
+}
+
+.menu{
+  background-color:white;
+}
+
+.menu ul{
+  display: flex;
+  justify-content: space-around;
+}
+
+.menu li{
+  list-style: none;
+}
+
+a {
+  color: teal;
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration:underline; 
+}
+
+.site-subtitle,
+.site-title{
+  color: Brown;
+  text-align: center;
+  font-size: 40px;
+}
+
+.site-subtitle{
+  font-style: italic;
+}
